created project getAll, getOne and create project  endpoint
