# src/routes/projects.ts
@@ -1,4 +1,11 @@
 import { Router } from "express";
+import { Auth } from "./userAuth";
+import { validateProject } from "../validation/validateProject";
+import {
+  createProject,
+  getAllProjects,
+  getAProject,
+} from "../controllers/projectController";
 
 const db = require("../../database/models/");
 
@@ -7,33 +14,25 @@ const { User, Project } = db;
 const router = Router();
 
 // route to get all projects
-router.get("/", async (req, res) => {
-  const users = await Project.findAll({
-    include: [User],
-  });
-  res.json({ users });
+router.get("/", Auth, async (req: any, res) => {
+  const projects = await getAllProjects();
+  res.json(projects);
 });
 
 // route to get a single project
-router.get("/:id", async (req, res) => {
-  const users = await Project.findOne({
-    where: { id: req.params.id },
-    include: [User],
-  });
-  res.json({ users });
+router.get("/:id", Auth, async (req: any, res) => {
+  const { id } = req.params;
+  const project = await getAProject(id);
+  res.json(project);
 });
 
 // route to create a project
-router.post("/", async (req, res) => {
-  const user = await Project.create({
-    project_name: "Vue app",
-    description: "App for Vue users",
-    project_identifier: "vue-1",
-    start_date: "2020-04-21",
-    end_date: "2020-04-23",
-    UserId: 2,
-  });
-  res.json({ user });
+router.post("/", Auth, async (req: any, res) => {
+  const { id } = req.user;
+
+  const project = await createProject(id, req.body);
+
+  res.json({ data: project });
 });
 
 export default router;
