# swagger.json
@@ -57,10 +57,33 @@
         }
       }
     },
-    "/api/books/{bookId}": {
+    "/api/v1/projects": {
+      "post": {
+        "tags": ["Project"],
+        "description": "Create new user",
+        "parameters": [
+          {
+            "title": "user",
+            "in": "body",
+            "description": "User we want to create",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "New user is created",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      },
       "parameters": [
         {
-          "name": "bookId",
+          "name": "id",
           "in": "path",
           "required": true,
           "description": "ID of book that we want to find",
@@ -68,7 +91,7 @@
         }
       ],
       "get": {
-        "tags": ["Books"],
+        "tags": ["Project"],
         "summary": "Get book with given ID",
         "responses": {
           "200": {
